[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/boss/boss.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "attack1"

[sub_resource type="Animation" id=2]
resource_name = "attack2"

[sub_resource type="Animation" id=3]
resource_name = "attack3"

[sub_resource type="Animation" id=4]
resource_name = "idle"

[node name="boss" type="Node2D"]
script = ExtResource( 1 )

[node name="animBoss" type="AnimationPlayer" parent="."]
anims/attack1 = SubResource( 1 )
anims/attack2 = SubResource( 2 )
anims/attack3 = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="area_damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_damage"]

[node name="area_headBoss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_headBoss"]

[node name="posMeteorBig" type="Position2D" parent="."]

[node name="pos1" type="Position2D" parent="."]
position = Vector2( 37, -24 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( 157, -24 )

[node name="pos3" type="Position2D" parent="."]
position = Vector2( 323, -26 )

[node name="pos4" type="Position2D" parent="."]
position = Vector2( 498, -35 )

[node name="pos5" type="Position2D" parent="."]
position = Vector2( 618, -41 )

[node name="pos6" type="Position2D" parent="."]
position = Vector2( 741, -41 )

[node name="pos7" type="Position2D" parent="."]
position = Vector2( 882, -37 )

[node name="pos8" type="Position2D" parent="."]
position = Vector2( 1028, -44 )

[node name="pos9" type="Position2D" parent="."]
position = Vector2( 1169, -37 )

[node name="pos10" type="Position2D" parent="."]
position = Vector2( 1304, -41 )

[node name="delay_attack" type="Timer" parent="."]

[connection signal="animation_finished" from="animBoss" to="." method="_on_animBoss_animation_finished"]
[connection signal="area_entered" from="area_headBoss" to="." method="_on_area_headBoss_area_entered"]
[connection signal="timeout" from="delay_attack" to="." method="_on_delay_attack_timeout"]
